compiled/anotherwebapp/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: another-web-app
  namespace: another-web-app
spec:
  selector:
    app: another-web-app
  ports:
    - port: 3000
      targetPort: 3000
